--- a/fineroof/app/template/sass/layout/_distributing-page.scss
+++ b/fineroof/app/template/sass/layout/_distributing-page.scss
@@ -1,5 +1,8 @@
 .distributing-page {
-	margin: 73px 0px 130px;
+	margin: 0 0 130px;
+	@include adaptive(775) {
+		margin-bottom: 60px;
+	}
 	&__image {
 		width: 100%;
 		height: 100%;
@@ -24,6 +27,10 @@
 		top: 27px;
 		left: 26px;
 		z-index: 2;
+		@include adaptive(1075) {
+			top: 10px;
+			left: 12px;
+		}
 		& svg {
 			width: 37px;
 			height: 15px;
@@ -35,6 +42,16 @@
 		display: flex;
 		align-items: stretch;
 		margin-right: 73px;
+		margin-top: 73px;
+		@include adaptive(1075) {
+			width: 100%;
+			margin-right: 0;
+			margin-top: 40px;
+		}
+		@include adaptive(775) {
+			flex-direction: column;
+
+		}
 
 	}
 	&__column {
@@ -43,6 +60,14 @@
 		display: -ms-flex;
 		display: flex;
 		flex-direction: column;
+
+		@include adaptive(1075) {
+			width: calc(100% / 3);
+		}
+		@include adaptive(775) {
+			width: 100%;
+			align-items: center;
+		}
 
 	}
 	&__name {
@@ -56,6 +81,10 @@
 
 		margin-top: auto;
 		padding-top: 21px;
+		@include adaptive(1075) {
+			font-size: 18px;
+			padding-top: 13px;
+		}
 	}
 	&__item {
 		width: 391px;
@@ -72,6 +101,18 @@
 
 		transition: .3s;
 		overflow: hidden;
+		@include adaptive(1075) {
+			width: 100%;
+			height: 150px;
+			padding: 10px 12px;
+		}
+		@include adaptive(775) {
+			max-width: 400px;
+			height: 230px;
+		}
+		@include phone {
+			height: 175px;
+		}
 		& a {
 
 			width: 100%;
@@ -110,9 +151,33 @@
 			transform: translate(-48%, -45%);
 
 			transition: .3s;
+			@include adaptive(1075) {
+				width: 750px;
+				height: 750px;
+				border: 300px solid #1bc09b75;
+			}
+			@include adaptive(775) {
+				width: 1180px;
+				height: 1180px;
+				border: 430px solid #1bc09b75;
+			}
+			@include phone {
+				width: 750px;
+				height: 750px;
+				border: 300px solid #1bc09b75;
+			}
 		}
 		&_big {
 			height: 481px;
+			@include adaptive(1075) {
+				height: 300px;
+			}
+			@include adaptive(775) {
+				height: 430px;
+			}
+			@include phone {
+				height: 292px;
+			}
 			&:hover {
 				&::before {
 					width: 1700px;
