--- a/fineroof/app/template/sass/sections/_get-payment.scss
+++ b/fineroof/app/template/sass/sections/_get-payment.scss
@@ -7,5 +7,9 @@
 		justify-content: center;
 
 		margin-bottom: 130px;
+		@include phone {
+			text-align: center;
+			margin-bottom: 72px;
+		}
 	}
 }
