--- a/fineroof/app/template/sass/sections/_catalog-list.scss
+++ b/fineroof/app/template/sass/sections/_catalog-list.scss
@@ -14,11 +14,27 @@
 
 		padding: 17px 0;
 		margin-bottom: 8px;
+		@include adaptive(610) {
+			flex-direction: column;
+			border: none;
+		}
 		&_width {
 			width: 100%;
-	    max-width: 390px;
+	    	max-width: 390px;
+			@include adaptive(610) {
+				max-width: none;
+			}
 		}
 		& #{$parent}__block {
+			@include adaptive(610) {
+				border-radius: 6px;
+				border-top: 2px solid #e1f1ed;
+				border-bottom: 2px solid #e1f1ed;
+				border-left: 2px solid #e1f1ed;
+				border-right: 2px solid #e1f1ed;
+				margin: 13.5px 0;
+
+			}
 			&:nth-child(2) {
 				border-left: 2px solid #e1f1ed;
 				border-right: 2px solid #e1f1ed;
@@ -70,6 +86,14 @@
 			position: absolute;
 			top: 0;
 			left: 0;
+			@include adaptive(1075) {
+				left: 50%;
+				-webkit-transform: translateX(-50%);
+				-moz-transform: translateX(-50%);
+				-ms-transform: translateX(-50%);
+				-o-transform: translateX(-50%);
+				transform: translateX(-50%);
+			}
 		}
 	}
 	&__top {
@@ -82,6 +106,9 @@
 		align-self: flex-start;
 
 		transition: inherit;
+		@include adaptive(1075) {
+			align-self: center;
+		}
 	}
 	&__item {
 		color: #b7b7b7;
@@ -117,6 +144,16 @@
 		cursor: pointer;
 
 		transition: .3s;
+		@include adaptive(1075) {
+			align-items: center;
+			text-align: center;
+			padding: 0px 15px 10px 15px;
+		}
+		@include adaptive(610) {
+			width: 100%;
+			max-width: 100%;
+			padding: 15px;
+		}
 		&.isActive {
 			& #{$parent}__name {
 				color: #1bc09b;
