--- a/fineroof/app/template/sass/layout/_content-block.scss
+++ b/fineroof/app/template/sass/layout/_content-block.scss
@@ -154,8 +154,8 @@
 		}
 		&_worker {
 			position: absolute;
-			top: calc(50% - 21vw);
-			left: -64vw;
+			top: 39%;
+			left: -811px;
 			@include adaptive(1075) {
 				top: calc(50% - 53vw);
 				left: -38vw;
