--- a/fineroof/app/template/sass/sections/_content.scss
+++ b/fineroof/app/template/sass/sections/_content.scss
@@ -24,7 +24,7 @@
 		  opacity: 0;
 	  }
       &:last-child {
-        &::before {
+        & svg {
           opacity: 0;
         }
       }
@@ -72,21 +72,65 @@
   }
   &_not-full-house {
     & span:last-child {
-      &::before {
-        background-image: url('../img/house-notfull.png');
-        right: -20px;
-		@include adaptive (775) {
+		& #{$parent}__svg {
+			width: 94px;
+			height: 90px;
+			position: absolute;
+			top: 45%;
 			right: -5px;
+			-webkit-transform: translateY(-50%);
+			transform: translateY(-50%);
+			z-index: -1;
+			transition: 0.3s;
+			@include adaptive (1075) {
+				width: 50px;
+				height: 50px;
+
+				right: -6px;
+			}
+			@include adaptive (610) {
+				top: 45%;
+			}
+			@include phone {
+				height: 48px;
+				top: 45%;
+			}
 		}
-      }
+      //&::before {
+      //  background-image: url('../img/house-notfull.png');
+      //  right: -20px;
+		//@include adaptive (775) {
+		//	right: -5px;
+		//}
+      //}
     }
   }
   &_full-house {
     & span:last-child {
-      &::before {
-        background-image: url('../img/house-full.png');
-        right: 0;
-      }
+			& #{$parent}__svg {
+				width: 94px;
+				height: 90px;
+				position: absolute;
+				top: 45%;
+				right: 0;
+				-webkit-transform: translateY(-50%);
+				transform: translateY(-50%);
+				z-index: -1;
+				transition: 0.3s;
+				@include adaptive (1075) {
+					width: 50px;
+					height: 50px;
+
+					right: -6px;
+				}
+				@include adaptive (610) {
+					top: 45%;
+				}
+				@include phone {
+					height: 48px;
+					top: 45%;
+				}
+			}
 		}
 		&:hover {
 			& span {
